--- a/WcfService5/WcfService5/Web.config
+++ b/WcfService5/WcfService5/Web.config
@@ -9,20 +9,29 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <extensions>
+      <behaviorExtensions>
+        <add name="Validator" type="ParameterValidator.CustomBehaviorSection, ParameterValidator, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+      </behaviorExtensions>
+    </extensions>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="EndPointBehavior">
+          <Validator />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <services>
       <service name="WcfService5.EmployeeService">
-        <endpoint address="" binding="basicHttpBinding" contract="WcfService5.IAddandCreate" />
-        <endpoint address="ws" binding="wsHttpBinding" contract="WcfService5.IRetrieve" />
+        <endpoint address="" behaviorConfiguration="EndPointBehavior"
+          binding="basicHttpBinding" contract="WcfService5.IAddandCreate" />
+        <endpoint address="ws" behaviorConfiguration="EndPointBehavior" binding="wsHttpBinding" contract="WcfService5.IRetrieve" />
       </service>
     </services>
     <!--<protocolMapping>
