--- a/WcfService5/Consumer/Consumer.csproj
+++ b/WcfService5/Consumer/Consumer.csproj
@@ -86,6 +86,9 @@
     <None Include="Service References\EmployeeService\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Service References\EmployeeService\EmployeeService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\EmployeeService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
